// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should be able to create an identity, returning a promise 1`] = `
Identity {
  "environmentId": "STG",
  "key": "NicoZelaya",
  "organizationId": "SplitTesting",
  "timestamp": 1496102956729,
  "trafficTypeId": "userTT",
  "values": Object {
    "dob": "02/08/1989",
    "email": "nico@gmail.com",
    "username": "NicoZelaya",
  },
}
`;

exports[`it should be able to save a collection of identities, returning a promise resolving to the results 1`] = `
Identity {
  "environmentId": "STG",
  "key": "NicoZelaya",
  "organizationId": "SplitTesting",
  "timestamp": 1496105118658,
  "trafficTypeId": "userTT",
  "values": Object {
    "dob": "02/08/1989",
    "email": "nico@gmail.com",
    "username": "NicoZelaya",
  },
}
`;
